--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Rodrigo Souza <rodrigo@rodrigosouza.dev>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.2.1"
+    "@types/node": "^18.8.3",
+    "git-commit-msg-linter": "^4.2.1",
+    "typescript": "^4.8.4"
   }
 }
