--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "Rodrigo Souza <rodrigo@rodrigosouza.dev>",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
@@ -17,7 +19,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.1",
+    "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "*"
   }
 }
