--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
+    "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -29,5 +30,8 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "*"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
