feat: ensure BcryptAdapter calls Bcrypt with correct values

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
     "@types/validator": "^13.7.7",
@@ -32,6 +33,7 @@
     "typescript": "*"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "validator": "^13.7.0"
   }
 }
