--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.1.2",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.8.3",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -34,6 +36,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "mongodb": "^4.10.0",
     "validator": "^13.7.0"
   }
 }
