--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.js",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.8.3",
@@ -30,12 +32,14 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "sucrase": "^3.28.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "*"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^4.10.0",
     "validator": "^13.7.0"
   }
