--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.1.2",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.8.3",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
@@ -33,6 +34,7 @@
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
     "sucrase": "^3.28.0",
+    "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "*"
