--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.js",
@@ -34,6 +36,7 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.28.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
@@ -43,7 +46,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "fast-glob": "^3.2.12",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "validator": "^13.7.0"
