--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
