--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "target": "ES2021",
     "esModuleInterop": true,
+    "sourceMap": true
   },
   "include": [
     "src"
