--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: node:16
     working_dir: /usr/src/clean-node-api
     restart: always
-    command: bash -c "yarn install --only=prod && yarn debug"
+    command: bash -c "yarn install && yarn debug"
     environment:
       - PORT=5050
       - MONGO_URL=mongodb://mongo:27017/clean-node-api
