--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prepare": "husky install",
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc",
-    "debug": "node --inspect=0.0.0.0:9222 --nolazy dist/main/server.js",
+    "build:watch": "rimraf dist && tsc -w",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -38,6 +39,7 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
