chore: add githubaction and coveralls

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm install
-    - run: npm run eslint 'src/**'
-    - run: npm run test:coveralls
+    - run: yarn
+    - run: yarn eslint 'src/**'
+    - run: yarn test:coveralls
