--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:unit": "yarn test --watch -c jest-unit-config.js",
     "test:integration": "yarn test --watch -c jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests",
+    "test:coveralls": "yarn test:ci && coveralls < coverage/lcov.info",
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "coveralls": "^3.1.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
