--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,11 +17,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: CI ${{ matrix.node-version }}
+    - name: RUN CI ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: yarn
     - run: yarn eslint 'src/**'
-    - run: yarn test:coveralls
+    - run: yarn test:ci
+
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@1.1.3
+      env:
+        NODE_COVERALLS_DEBUG: 1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel: true
