--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,14 +22,28 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn
-    - run: yarn eslint 'src/**'
-    - run: yarn test:ci
 
-    - name: Coveralls GitHub Action
-      uses: coverallsapp/github-action@1.1.3
-      env:
-        NODE_COVERALLS_DEBUG: 1
+    - name: Dependencies installation
+      run: yarn install
+
+    - name: Lint
+      run: yarn eslint 'src/**'
+
+    - name: TEST:CI
+      run: yarn test:ci
+
+    - name: Coveralls Parallel
+      uses: coverallsapp/github-action@master
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.github_token }}
         parallel: true
+
+  finish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.github_token }}
+        parallel-finished: true
