--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "lint-staged": "^13.0.3",
+    "mockdate": "^3.0.5",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "supertest": "^6.3.0",
