refactor: change all paths to use modules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "overrides": [
     ],
     "parserOptions": {
-        "project": "./tsconfig.eslint.json"
+        "project": "./tsconfig.json"
     },
     "rules": {
         "@typescript-eslint/strict-boolean-expressions": "off",
