--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.8.3",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "coveralls": "^3.1.1",
@@ -55,6 +56,7 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^4.10.0",
+    "swagger-ui-express": "^4.5.0",
     "validator": "^13.7.0"
   },
   "engines": {
