--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clean-node-api",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "main": "index.js",
   "author": "Rodrigo Souza <rodrigo@rodrigosouza.dev>",
   "license": "MIT",
@@ -21,6 +21,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
