--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prepare": "husky install",
     "start": "node dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "postbuild": "copyfiles -u 1 public/**/* dist/static",
     "build:watch": "rimraf dist && tsc -w",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "up": "yarn build && docker-compose up -d",
@@ -33,6 +34,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
