--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/method-signature-style": "off",
         "@typescript-eslint/return-await": "off",
         "@typescript-eslint/no-misused-promises": "off",
-        "@typescript-eslint/consistent-type-definitions": "off"
+        "@typescript-eslint/consistent-type-definitions": "off",
+        "@typescript-eslint/no-namespace": "off"
     }
 }
