--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "typescript": "*"
   },
   "dependencies": {
+    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
