feat: add survey schema

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "prepare": "husky install",
     "start": "node dist/main/server.js",
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "postbuild": "copyfiles -u 1 public/**/* dist/static",
-    "build:watch": "rimraf dist && tsc -w",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
+    "postbuild": "copyfiles -u 1 public/**/* dist/static",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --no-cache",
@@ -26,6 +26,7 @@
     "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongodb": "^4.0.7",
@@ -59,6 +60,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "graphql-iso-date": "^3.6.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
