--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "apollo-server-integration-testing": "^3.0.0",
     "bson-objectid": "^2.0.3",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
