--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
     "postbuild": "copyfiles -u 1 public/**/* dist/static",
+    "check": "npm-check -s -u",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --no-cache",
@@ -23,35 +24,36 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@shelf/jest-mongodb": "^4.1.0",
+    "@shelf/jest-mongodb": "^4.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/graphql-iso-date": "^3.4.0",
-    "@types/jest": "^29.1.2",
+    "@types/jest": "^29.2.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^18.8.3",
+    "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/validator": "^13.7.7",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@types/validator": "^13.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
     "apollo-server-integration-testing": "^3.0.0",
     "bson-objectid": "^2.0.3",
     "copyfiles": "^2.4.1",
     "coveralls": "^3.1.1",
-    "eslint": "^8.0.1",
+    "eslint": "^8.27.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
     "git-commit-msg-linter": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "^29.1.2",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "mockdate": "^3.0.5",
     "nodemon": "^2.0.20",
+    "npm-check": "^6.0.1",
     "rimraf": "^3.0.2",
-    "supertest": "^6.3.0",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "*"
@@ -65,8 +67,8 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
-    "mongodb": "^4.10.0",
-    "swagger-ui-express": "^4.5.0",
+    "mongodb": "^4.11.0",
+    "swagger-ui-express": "^4.6.0",
     "validator": "^13.7.0"
   },
   "engines": {
